--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-numpy>=1.9.2
-scipy>=0.15.1
+streamlit==0.61.0
+pandas==0.25.3
+numpy==1.18.1
 scikit-learn==0.22.1
-matplotlib>=1.4.3
-pandas>=0.19
-streamlit
